<resources>
    <string name="app_name">Alpa Rapid 21</string>
    <string name="screen">Pengadilan Pandeglang</string>
    <string name="title_login">Aplikasi Pengendali Anggaran Kepaniteraan Pidana</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="type">Type</string>
    <string name="password">Password</string>
    <string name="sign_in">Masuk</string>
    <string name="home">Home</string>
    <string name="persediaan">Persediaan</string>
    <string name="perkara">Perkara</string>
    <string name="report">Reports</string>
    <string name="docs">Document</string>
    <string name="profile">Profile</string>
    <string name="error_fields">Anda harus mengisi semua form tersedia !</string>
    <string name="min_pass">Password Min 6 Char !</string>
    <string name="add_users">Buat Akun</string>
    <string name="add_surat">Buat Surat</string>
    <string name="edit_users">Edit Profile</string>
    <string name="show_notif">Lihat Semua</string>
    <string name="users">User</string>
    <string name="desc_add_users">Buat pengguna baru untuk applikasi. Anda harus mengisi semua form ! </string>
    <string name="url_image">https://digitalsystemindo.com/jaksa/public/images/</string>
    <string name="pass_info">Lupa password ? </string>
    <string name="get_pass"> Get my password !</string>
    <string name="add_perkara">Perkara Baru</string>
    <string name="perkara_desc">Harap lengkapi semua form tersedia untuk membuat Perkara</string>
    <string name="surat_desc">Harap lengkapi semua form tersedia untuk membuat Surat</string>
    <string name="jenis_dakwaan">Jenis Perkara</string>
    <string name="tanggal_dakwaan">Tanggal Penerimaan Berkas</string>
    <string name="nomer_dakwaan">Nomer Perkara</string>
    <string name="identitas_dakwaan">Identitas Terdakwa</string>
    <string name="dakwaan">Dakwaan</string>
    <string name="penahanan">Lama Penahanan</string>
    <string name="pp">Panitera Pengganti</string>
    <string name="jurusita">Jurusita</string>
    <string name="save">Simpan</string>
    </resources>