<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home"
        android:icon="@drawable/icon_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/persediaan"
        android:icon="@drawable/icon_box"
        android:title="@string/persediaan"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/document"
        android:icon="@drawable/icon_document"
        android:title="@string/docs"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/perkara"
        android:icon="@drawable/icon_perkara"
        android:title="@string/perkara"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/profile"
        android:icon="@drawable/icon_users"
        android:title="@string/users"
        app:showAsAction="ifRoom"/>
</menu>