<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/ijo"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context=".activity.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:id="@+id/l2">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/logos"
            android:id="@+id/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/opop"
                android:text="alpa rapid 21"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_marginTop="15dp"
                android:text="@string/title_login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/l2"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/colorPrimary"
        android:id="@+id/username_layout"
        android:hint="@string/username"
        style="@style/TextInputLayoutLogin"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/name"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/username_layout"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimary"
        app:passwordToggleEnabled="true"
        android:id="@+id/password_layout"
        app:passwordToggleTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextInputLayoutLogin"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/password"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_signIn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="17dp"
        app:layout_constraintEnd_toEndOf="@id/btn_signIn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/gopher_reguler"
            android:textColor="@color/colorPrimary"
            android:text="@string/pass_info"/>

        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/forgot_password"
            android:fontFamily="@font/gopher_reguler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/get_pass"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/sign_in"
        android:background="@drawable/button_style"
        android:textStyle="normal"
        app:backgroundTintMode="add"
        android:textAllCaps="false"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>